Fixed formatting problem with figure align left not flowing with other columns. Now if align is not set for a figure or story, it will have no default alignment. Aligning only works relative to things that aren't in columns.

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -322,8 +322,6 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
 }
 
 .sdss-story {
-	margin-left: 5px; 
-	margin-right: 5px; 
 	& .panel-heading { background-color: inherit;}
 }
 
